[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ipv6-only"
version = "0.1.0"
description = "Comprehensive IPv6-only networking tools and utilities"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "IPv6-Only Project", email = "contact@ipv6-only.example.com"}
]
maintainers = [
    {name = "Hyperpolymath", email = "hyperpolymath@example.com"}
]
keywords = ["ipv6", "networking", "subnet", "calculator", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "isort>=5.0.0",
    "pylint>=2.15.0",
    "bandit>=1.7.0",
]
dns = [
    "dnspython>=2.0.0",
]
cli = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.scripts]
ipv6-calc = "ipv6tools.cli:calc_cli"
ipv6-validate = "ipv6tools.cli:validate_cli"
ipv6-gen = "ipv6tools.cli:generate_cli"
ipv6-rsr-verify = "ipv6tools.rsr_verify:main"

[project.urls]
Homepage = "https://github.com/Hyperpolymath/ipv6-only"
Documentation = "https://github.com/Hyperpolymath/ipv6-only/tree/main/docs"
Repository = "https://github.com/Hyperpolymath/ipv6-only"
Issues = "https://github.com/Hyperpolymath/ipv6-only/issues"
Changelog = "https://github.com/Hyperpolymath/ipv6-only/blob/main/CHANGELOG.md"

# ============================================================================
# PYTEST Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "network: marks tests requiring network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# COVERAGE Configuration
# ============================================================================

[tool.coverage.run]
source = ["ipv6tools"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# MYPY Configuration
# ============================================================================

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ============================================================================
# BLACK Configuration
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# ============================================================================
# ISORT Configuration
# ============================================================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["ipv6tools"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# PYLINT Configuration
# ============================================================================

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "ip", "v6"]

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 1

# ============================================================================
# BANDIT Configuration
# ============================================================================

[tool.bandit]
exclude_dirs = ["/tests", "/.venv", "/venv"]
skips = ["B101", "B601"]
